--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.4.5",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.2.0"
   },
   "scripts": {
